<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="54sp"
        android:layout_marginRight="8dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:id="@+id/solution_view"
        android:layout_above="@id/result_view">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_layout"
        android:text="@string/_0"
        android:textSize="72sp"
        android:layout_marginRight="8dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:id="@+id/result_view">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttons_layout"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/button_ce"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:textSize="24sp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/ce"
                android:textStyle="bold"
                android:textColor="@color/black"
                 />

            <Button
                android:id="@+id/button_c"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:textSize="24sp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/c"
                android:textStyle="bold"
                android:textColor="@color/black"
                 />

            <Button
                android:id="@+id/button_bs"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:textSize="24sp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/bs"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/divide"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/button_7"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_7"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_8"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_9"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_multiply"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/multiply"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/button_4"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_4"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_5"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_6"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/plus"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/button_1"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_2"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_3"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/minus"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/button_negative_positive"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/negative_positive"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_0"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white_smoke"
                android:text="@string/_0"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/dot"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="8dp"
                android:backgroundTint="@color/light_gray"
                android:text="@string/equal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>